Fixed alignment on material icons for resume.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -145,6 +145,10 @@ a:hover {
     right: 16px;
 }
 
+.resume .material-icons {
+    vertical-align: middle;
+}
+
 /*----------------------------------------------------------------------------*/
 /* Styles for post page ------------------------------------------------------*/
 /*----------------------------------------------------------------------------*/
